# tr_pp_bot

./: .gitignore  Dockerfile  pyproject.toml
.github/workflows/: ci.yaml
tr_pp_bot/: config.py  main.py  misc.py
tr_pp_bot/apps/: __init__.py  base_command.py  base_event.py
tr_pp_bot/apps/commands/: __init__.py  test.py  test_admin.py
tr_pp_bot/apps/events/: __init__.py  captcha.py
tr_pp_bot/apps/tr_main/: __init__.py
tr_pp_bot/apps/tr_main/commands/: __init__.py  job.py  job_p.py
tr_pp_bot/apps/tr_main/events/: __init__.py  capcha.py
tr_pp_bot/apps/tr_shared/: __init__.py
tr_pp_bot/handlers/: commands.py  errors.py
tr_pp_bot/middleware/: sentry_context_middleware.py
tr_pp_bot/middlewares/: ignore_middleware.py
