[tool.poetry]
name = "tr-pp-bot"
version = "0.1.0"
description = ""
authors = ["Benyamin Ginzburg <benyomin.94@gmail.com>"]
readme = "README.md"
packages = [{include = "tr_pp_bot"}]

[tool.poetry.dependencies]
python = "^3.10"

aiogram = "*"
aiogram-metrics = "*"
betterlogging = "*"
sentry-sdk = "*"
pydantic = {extras = ["dotenv"],version = '*'}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
