[project]
name = "tr-pp-bot"
version = "0.1.0"
description = ""
authors = [
    {name = "Benyamin Ginzburg"},
]
dependencies = [
    "aiogram==3.0.0",
    "aiogram-metrics",
    "betterlogging",
    "pydantic",
    "pydantic-settings",
    "setuptools",
]

requires-python = ">=3.11,<4.0"
license = {text = "-"}
readme = "README.md"
